feat: sliding window day 2

--- a/educative/pattern_for_coding_questions/sliding_window/sliding_window.ipynb
+++ b/educative/pattern_for_coding_questions/sliding_window/sliding_window.ipynb
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -129,6 +129,232 @@
     "print(\"Smallest subarray length: \" + str(smallest_subarray_sum(7, [2, 1, 5, 2, 3, 2])))\n",
     "print(\"Smallest subarray length: \" + str(smallest_subarray_sum(7, [2, 1, 5, 2, 8])))\n",
     "print(\"Smallest subarray length: \" + str(smallest_subarray_sum(8, [3, 4, 1, 1, 6])))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of the longest substring: 4\n",
+      "Length of the longest substring: 2\n",
+      "Length of the longest substring: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def longest_substring_with_k_distinct(str1, k):\n",
+    "  window_start = 0\n",
+    "  max_length = 0\n",
+    "  char_frequency = {}\n",
+    "\n",
+    "  # in the following loop we'll try to extend the range [window_start, window_end]\n",
+    "  for window_end in range(len(str1)):\n",
+    "    right_char = str1[window_end]\n",
+    "    if right_char not in char_frequency:\n",
+    "      char_frequency[right_char] = 0\n",
+    "    char_frequency[right_char] += 1\n",
+    "\n",
+    "    # shrink the sliding window, until we are left with 'k' distinct characters in the char_frequency\n",
+    "    while len(char_frequency) > k:\n",
+    "      left_char = str1[window_start]\n",
+    "      char_frequency[left_char] -= 1\n",
+    "      if char_frequency[left_char] == 0:\n",
+    "        del char_frequency[left_char]\n",
+    "      window_start += 1  # shrink the window\n",
+    "    # remember the maximum length so far\n",
+    "    max_length = max(max_length, window_end-window_start + 1)\n",
+    "  return max_length\n",
+    "\n",
+    "print(\"Length of the longest substring: \" + str(longest_substring_with_k_distinct(\"araaci\", 2)))\n",
+    "print(\"Length of the longest substring: \" + str(longest_substring_with_k_distinct(\"araaci\", 1)))\n",
+    "print(\"Length of the longest substring: \" + str(longest_substring_with_k_distinct(\"cbbebi\", 3)))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "Maximum number of fruits: 3\n",
+      "Maximum number of fruits: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#Fruit into basket- medium\n",
+    "\n",
+    "def fruits_into_baskets(fruits):\n",
+    "    max_fruit=0\n",
+    "    l=0\n",
+    "    fr_req={}\n",
+    "\n",
+    "    for r in range(len(fruits)):\n",
+    "        if fruits[r] not in fr_req:\n",
+    "             fr_req[fruits[r]] = 1\n",
+    "        else:\n",
+    "            fr_req[fruits[r]]+=1\n",
+    "\n",
+    "        while len(fr_req)>2:\n",
+    "            if fruits[l] in fr_req:\n",
+    "                fr_req[fruits[l]]-=1\n",
+    "            if fr_req[fruits[l]]==0:\n",
+    "                del fr_req[fruits[l]]\n",
+    "            l+=1\n",
+    "    \n",
+    "        max_fruit = max(max_fruit,r-l+1)\n",
+    "\n",
+    "\n",
+    "    return max_fruit\n",
+    "\n",
+    "print(fruits_into_baskets(['A', 'B', 'C', 'A', 'C']))\n",
+    "print(\"Maximum number of fruits: \" + str(fruits_into_baskets(['A', 'B', 'C', 'A', 'C'])))\n",
+    "print(\"Maximum number of fruits: \" + str(fruits_into_baskets(['A', 'B', 'C', 'B', 'B', 'C'])))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of the longest substring: 3\n",
+      "Length of the longest substring: 2\n",
+      "Length of the longest substring: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Longest sub string without repeating character  LC-3 medium\n",
+    "\n",
+    "\n",
+    "def non_repeat_substring(str):\n",
+    "    l=0\n",
+    "    max_length=0\n",
+    "    char_index_map={}\n",
+    "\n",
+    "    for r in range(len(str)):\n",
+    "        r_char  = str[r]\n",
+    "        if r_char in char_index_map:\n",
+    "            l = max(l,char_index_map[r_char]+1)\n",
+    "        char_index_map[r_char] = r\n",
+    "        max_length = max(max_length,r-l+1)\n",
+    "    return max_length\n",
+    "\n",
+    "\n",
+    "    \n",
+    "print(\"Length of the longest substring: \" + str(non_repeat_substring(\"aabccbb\")))\n",
+    "print(\"Length of the longest substring: \" + str(non_repeat_substring(\"abbbb\")))\n",
+    "print(\"Length of the longest substring: \" + str(non_repeat_substring(\"abccde\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n",
+      "{'a': 0, 'b': 3, 'c': 2}\n",
+      "5\n",
+      "3\n",
+      "{'a': 0, 'b': 3, 'c': 1}\n",
+      "4\n",
+      "2\n",
+      "4\n",
+      "5\n",
+      "{'a': 0, 'b': 0, 'c': 1, 'd': 1, 'e': 1}\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#Longest repeating character replacement   LC-424 medium\n",
+    "\n",
+    "def length_of_longest_substring(str,k):\n",
+    "    l=0\n",
+    "    max_sub=0\n",
+    "    max_repeat=0\n",
+    "    char_list={}\n",
+    "    for r in range(len(str)):\n",
+    "        right_char = str[r]\n",
+    "        if right_char not in char_list:\n",
+    "            char_list[right_char] =0\n",
+    "        char_list[right_char]+=1\n",
+    "\n",
+    "        max_repeat = max(max_repeat,char_list[right_char])\n",
+    "        if(r-l+1-max_repeat)>k:\n",
+    "            print(r)\n",
+    "            left_char = str[l]\n",
+    "            char_list[left_char]-=1\n",
+    "            l+=1\n",
+    "        max_sub = max(max_sub,r-l+1)\n",
+    "    print(char_list)\n",
+    "    return max_sub\n",
+    "\n",
+    "print(length_of_longest_substring(\"aabccbb\", 2))\n",
+    "print(length_of_longest_substring(\"abbcb\", 1))\n",
+    "print(length_of_longest_substring(\"abccde\", 1))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Longest subarray with ones after replacement 1004-medium\n",
+    "\n",
+    "def length_of_longest_substring(arr,k):\n",
+    "    l=0\n",
+    "    max_one_count=0\n",
+    "    max_length=0\n",
+    "\n",
+    "    for r in range(len(arr)):\n",
+    "        if arr[r]==1:\n",
+    "            max_one_count+=1\n",
+    "        \n",
+    "        if (r-l+1-max_one_count)>k:\n",
+    "            if arr[l]==1:\n",
+    "                max_one_count-=1\n",
+    "            l+=1\n",
+    "        max_length= max(max_length,r-l+1)\n",
+    "    return max_length\n",
+    "\n",
+    "\n",
+    "print(length_of_longest_substring([0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1], 2))\n",
+    "print(length_of_longest_substring(\n",
+    "    [0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1], 3))"
    ]
   }
  ],
