feat: find permutation

--- a/educative/pattern_for_coding_questions/sliding_window/sliding_window.ipynb
+++ b/educative/pattern_for_coding_questions/sliding_window/sliding_window.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -355,6 +355,59 @@
     "print(length_of_longest_substring([0, 1, 1, 0, 0, 0, 1, 1, 0, 1, 1], 2))\n",
     "print(length_of_longest_substring(\n",
     "    [0, 1, 0, 0, 1, 1, 0, 1, 1, 0, 0, 1, 1], 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 2, 'b': 1, 'c': 1} 3\n",
+      "{'a': -1, 'b': -1, 'c': 0} 3\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#find permutation  \n",
+    "\n",
+    "\n",
+    "def find_permutation(str,pattern):\n",
+    "    l,matched=0,0\n",
+    "    char_freq={}\n",
+    "\n",
+    "    for char in pattern:\n",
+    "        char_freq[char]=1+char_freq.get(char,0)\n",
+    "    print(char_freq,len(char_freq))\n",
+    "\n",
+    "    for r in range(len(str)):\n",
+    "        right_char=str[r]\n",
+    "\n",
+    "        if right_char in char_freq:\n",
+    "            char_freq[right_char]-=1\n",
+    "            if char_freq[right_char]==0:\n",
+    "                matched+=1\n",
+    "        print(char_freq,len(char_freq))\n",
+    "        if matched == len(char_freq):\n",
+    "            return True\n",
+    "\n",
+    "        if r >= len(pattern)-1:\n",
+    "            left_char = str[l]\n",
+    "            l+=1\n",
+    "            if left_char in char_freq:\n",
+    "                if char_freq[left_char]==0:\n",
+    "                    matched-=1\n",
+    "                char_freq[left_char]+=1\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "print(find_permutation('abcbaa','aabc'))\n",
+    "        \n"
    ]
   }
  ],
