feat: fins string anagrams

--- a/educative/pattern_for_coding_questions/sliding_window/sliding_window.ipynb
+++ b/educative/pattern_for_coding_questions/sliding_window/sliding_window.ipynb
@@ -359,15 +359,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a': 2, 'b': 1, 'c': 1} 3\n",
-      "{'a': -1, 'b': -1, 'c': 0} 3\n",
       "True\n"
      ]
     }
@@ -382,7 +380,6 @@
     "\n",
     "    for char in pattern:\n",
     "        char_freq[char]=1+char_freq.get(char,0)\n",
-    "    print(char_freq,len(char_freq))\n",
     "\n",
     "    for r in range(len(str)):\n",
     "        right_char=str[r]\n",
@@ -391,7 +388,6 @@
     "            char_freq[right_char]-=1\n",
     "            if char_freq[right_char]==0:\n",
     "                matched+=1\n",
-    "        print(char_freq,len(char_freq))\n",
     "        if matched == len(char_freq):\n",
     "            return True\n",
     "\n",
@@ -408,6 +404,22 @@
     "\n",
     "print(find_permutation('abcbaa','aabc'))\n",
     "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#String Anagrams  LC 438 medium\n",
+    "\n",
+    "def find_string_anagrams(str1,pattern):\n",
+    "    result_indexes=[1]\n",
+    "\n",
+    "    return result_indexes\n",
+    "\n",
+    "print (find_string_anagrams(\"abbcabc\",\"abc\"))"
    ]
   }
  ],
