feat: finish two pointer

--- a/educative/pattern_for_coding_questions/sliding_window/sliding_window.ipynb
+++ b/educative/pattern_for_coding_questions/sliding_window/sliding_window.ipynb
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
     }
    ],
    "source": [
-    "#find permutation  \n",
+    "#find permutation   LC 567 medium/hard\n",
     "\n",
     "\n",
     "def find_permutation(str,pattern):\n",
@@ -408,18 +408,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "[2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "#String Anagrams  LC 438 medium\n",
     "\n",
     "def find_string_anagrams(str1,pattern):\n",
-    "    result_indexes=[1]\n",
+    "    result_indexes=[]\n",
+    "    char_freq={}\n",
+    "    for ch in pattern:\n",
+    "        char_freq[ch] = 1+ char_freq.get(ch,0)\n",
     "\n",
+    "    l,matched=0,0\n",
+    "\n",
+    "    for r in range(len(str1)):\n",
+    "        right_char = str1[r]\n",
+    "        \n",
+    "        if right_char in char_freq:\n",
+    "            char_freq[right_char]-=1\n",
+    "            if char_freq[right_char]==0:\n",
+    "                matched+=1\n",
+    "        \n",
+    "        if matched== len(char_freq):\n",
+    "            result_indexes.append(l)\n",
+    "\n",
+    "        if r >=len(pattern)-1:\n",
+    "            left_char = str1[l];\n",
+    "            l+=1\n",
+    "            if left_char in char_freq:\n",
+    "                if char_freq[left_char]==0:\n",
+    "                    matched-=1\n",
+    "                char_freq[left_char]+=1\n",
+    "    \n",
     "    return result_indexes\n",
     "\n",
-    "print (find_string_anagrams(\"abbcabc\",\"abc\"))"
+    "\n",
+    "print(find_string_anagrams(\"ppqp\", \"pq\"))\n",
+    "print(find_string_anagrams(\"abbcabc\", \"abc\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abdec\n",
+      "aabdec\n",
+      "bca\n",
+      "abc\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_substring(str1, pattern):\n",
+    "  window_start, matched, substr_start = 0, 0, 0\n",
+    "  min_length = len(str1) + 1\n",
+    "  char_frequency = {}\n",
+    "\n",
+    "  for chr in pattern:\n",
+    "    if chr not in char_frequency:\n",
+    "      char_frequency[chr] = 0\n",
+    "    char_frequency[chr] += 1\n",
+    "\n",
+    "  # try to extend the range [window_start, window_end]\n",
+    "  for window_end in range(len(str1)):\n",
+    "    right_char = str1[window_end]\n",
+    "    if right_char in char_frequency:\n",
+    "      char_frequency[right_char] -= 1\n",
+    "      if char_frequency[right_char] >= 0:  # Count every matching of a character\n",
+    "        matched += 1\n",
+    "\n",
+    "    # Shrink the window if we can, finish as soon as we remove a matched character\n",
+    "    while matched == len(pattern):\n",
+    "      if min_length > window_end - window_start + 1:\n",
+    "        min_length = window_end - window_start + 1\n",
+    "        substr_start = window_start\n",
+    "\n",
+    "      left_char = str1[window_start]\n",
+    "      window_start += 1\n",
+    "      if left_char in char_frequency:\n",
+    "        # Note that we could have redundant matching characters, therefore we'll decrement the\n",
+    "        # matched count only when a useful occurrence of a matched character is going out of the window\n",
+    "        if char_frequency[left_char] == 0:\n",
+    "          matched -= 1\n",
+    "        char_frequency[left_char] += 1\n",
+    "\n",
+    "  if min_length > len(str1):\n",
+    "    return \"\"\n",
+    "  return str1[substr_start:substr_start + min_length]\n",
+    "\n",
+    "\n",
+    "print(find_substring(\"aabdec\", \"abc\"))\n",
+    "print(find_substring(\"aabdec\", \"abac\"))\n",
+    "print(find_substring(\"abdbca\", \"abc\"))\n",
+    "print(find_substring(\"abcad\", \"abc\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 3]\n",
+      "[3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Words Concatenation LC 30 hard\n",
+    "\n",
+    "def find_word_concatenation(str1, words):\n",
+    "  if len(words) == 0 or len(words[0]) == 0:\n",
+    "    return []\n",
+    "\n",
+    "  word_frequency = {}\n",
+    "\n",
+    "  for word in words:\n",
+    "    if word not in word_frequency:\n",
+    "      word_frequency[word] = 0\n",
+    "    word_frequency[word] += 1\n",
+    "\n",
+    "  result_indices = []\n",
+    "  words_count = len(words)\n",
+    "  word_length = len(words[0])\n",
+    "\n",
+    "  for i in range((len(str1) - words_count * word_length)+1):\n",
+    "    words_seen = {}\n",
+    "    for j in range(0, words_count):\n",
+    "      next_word_index = i + j * word_length\n",
+    "      # Get the next word from the string\n",
+    "      word = str1[next_word_index: next_word_index + word_length]\n",
+    "      if word not in word_frequency:  # Break if we don't need this word\n",
+    "        break\n",
+    "\n",
+    "      # Add the word to the 'words_seen' map\n",
+    "      if word not in words_seen:\n",
+    "        words_seen[word] = 0\n",
+    "      words_seen[word] += 1\n",
+    "\n",
+    "      # No need to process further if the word has higher frequency than required\n",
+    "      if words_seen[word] > word_frequency.get(word, 0):\n",
+    "        break\n",
+    "\n",
+    "      if j + 1 == words_count:  # Store index if we have found all the words\n",
+    "        result_indices.append(i)\n",
+    "\n",
+    "  return result_indices\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(find_word_concatenation(\"catfoxcat\", [\"cat\", \"fox\"]))\n",
+    "print(find_word_concatenation(\"catcatfoxfox\", [\"cat\", \"fox\"]))\n"
    ]
   }
  ],
