feat: finish fast and slow pointer

--- a/educative/pattern_for_coding_questions/fast_and_slow/fast_and_slow.ipynb
+++ b/educative/pattern_for_coding_questions/fast_and_slow/fast_and_slow.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -148,30 +148,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n",
-      "5\n",
-      "25\n",
-      "25\n",
-      "29\n",
-      "85\n",
-      "29\n",
-      "89\n",
-      "145\n",
-      "85\n",
-      "42\n",
-      "20\n",
-      "89\n",
-      "4\n",
-      "16\n",
-      "145\n",
-      "37\n",
-      "58\n",
-      "42\n",
-      "89\n",
-      "145\n",
-      "20\n",
-      "42\n",
-      "20\n",
+      "True\n",
+      "True\n",
       "False\n"
      ]
     }
@@ -194,11 +172,270 @@
     "        digit = num %10\n",
     "        _sum+=digit*digit\n",
     "        num//=10\n",
-    "    print(_sum)\n",
+    "    # print(_sum)\n",
     "    return _sum\n",
     "\n",
-    "# print(find_happy_number(23))\n",
+    "print(find_happy_number(23))\n",
+    "print(find_happy_number(1))\n",
     "print(find_happy_number(12))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Middle Node: 3\n",
+      "Middle Node: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Middle of the linkedlist easy\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self,value,next=None):\n",
+    "        self.value = value\n",
+    "        self.next= next\n",
+    "\n",
+    "\n",
+    "def find_middle_of_linked_list(head):\n",
+    "    slow,fast=head,head\n",
+    "    while fast and fast.next:\n",
+    "        slow=slow.next\n",
+    "        fast= fast.next.next\n",
+    "    return slow\n",
+    "\n",
+    "head= Node(1)\n",
+    "head.next=Node(2)\n",
+    "head.next.next=Node(3)\n",
+    "head.next.next.next=Node(4)\n",
+    "head.next.next.next.next=Node(5)\n",
+    "\n",
+    "\n",
+    "print(\"Middle Node: \" + str(find_middle_of_linked_list(head).value))\n",
+    "\n",
+    "head.next.next.next.next.next = Node(6)\n",
+    "print(\"Middle Node: \" + str(find_middle_of_linked_list(head).value))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is palindrome: True\n",
+      "4 2\n",
+      "Is palindrome: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Problem challenge 1\n",
+    "#Palindrome Linked list medium\n",
+    "\n",
+    "# add all items to array and check values from start,end index.\n",
+    "# \n",
+    "class Node:\n",
+    "    def __init__(self,value,next=None):\n",
+    "        self.value = value\n",
+    "        self.next = next\n",
+    "\n",
+    "def is_palindromic_linked_list(head):\n",
+    "    slow,fast = head,head\n",
+    "    while fast and fast.next:\n",
+    "        slow=slow.next\n",
+    "        fast = fast.next.next\n",
+    "    head_second_half = reverse(slow)\n",
+    "    copy_head_second_half = head_second_half\n",
+    "\n",
+    "    while head and head_second_half:\n",
+    "        if head.value != head_second_half.value:\n",
+    "            break\n",
+    "        head = head.next\n",
+    "        head_second_half = head_second_half.next\n",
+    "    reverse(copy_head_second_half)\n",
+    "\n",
+    "    if head is None or head_second_half is None:\n",
+    "        return True\n",
+    "    print(head.value , head_second_half.value)\n",
+    "    return False\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "def reverse(head):\n",
+    "    prev = None\n",
+    "    while head:\n",
+    "        next = head.next\n",
+    "        head.next = prev\n",
+    "        prev = head\n",
+    "        head = next\n",
+    "    return prev\n",
+    "\n",
+    "head = Node(2)\n",
+    "head.next = Node(4)\n",
+    "head.next.next = Node(6)\n",
+    "head.next.next.next = Node(4)\n",
+    "head.next.next.next.next = Node(2)\n",
+    "\n",
+    "print(\"Is palindrome: \" + str(is_palindromic_linked_list(head)))\n",
+    "\n",
+    "head.next.next.next.next.next = Node(2)\n",
+    "head.next.next.next.next.next = Node(2)\n",
+    "print(\"Is palindrome: \" + str(is_palindromic_linked_list(head)))\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 12 4 10 6 8 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reaarrange a LinkedList medium\n",
+    "\n",
+    "\n",
+    "class Node:\n",
+    "    def __init__(self,value,next=None):\n",
+    "        self.value = value\n",
+    "        self.next = next\n",
+    "    def print_list(self):\n",
+    "        temp = self\n",
+    "        while temp:\n",
+    "            print(str(temp.value)+\" \", end='')\n",
+    "            temp = temp.next\n",
+    "        print()\n",
+    "\n",
+    "def reorder(head):\n",
+    "    if head is None or head.next is None:\n",
+    "        return\n",
+    "    slow,fast = head,head\n",
+    "    while fast and fast.next:\n",
+    "        slow=slow.next\n",
+    "        fast=fast.next.next\n",
+    "\n",
+    "    head_second_half = reverse(slow)\n",
+    "    head_first_half = head\n",
+    "\n",
+    "    while head_first_half and head_second_half:\n",
+    "        temp = head_first_half.next\n",
+    "        head_first_half.next = head_second_half\n",
+    "        head_first_half=temp\n",
+    "\n",
+    "        temp = head_second_half.next\n",
+    "        head_second_half.next = head_first_half\n",
+    "        head_second_half = temp\n",
+    "    \n",
+    "    if head_first_half:\n",
+    "        head_first_half.next = None\n",
+    "\n",
+    "\n",
+    "\n",
+    "def reverse(head):\n",
+    "    prev = None\n",
+    "    while head:\n",
+    "        next = head.next\n",
+    "        head.next = prev\n",
+    "        prev =head\n",
+    "        head = next\n",
+    "    return prev\n",
+    "\n",
+    "head = Node(2)\n",
+    "head.next = Node(4)\n",
+    "head.next.next = Node(6)\n",
+    "head.next.next.next = Node(8)\n",
+    "head.next.next.next.next = Node(10)\n",
+    "head.next.next.next.next.next = Node(12)\n",
+    "reorder(head)\n",
+    "head.print_list()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Problem challenge 3 \n",
+    "# Cycle in circular array hard\n",
+    "\n",
+    "def circular_array_loop_exists(arr):\n",
+    "\n",
+    "    for i in range(len(arr)):\n",
+    "        is_forward = arr[i]>=0\n",
+    "        slow,fast = i,i\n",
+    "    \n",
+    "    while True:\n",
+    "        slow = find_next_index(arr,is_forward,slow)\n",
+    "        fast = find_next_index(arr,is_forward,fast)\n",
+    "        if (fast!=-1):\n",
+    "            fast = find_next_index(arr,is_forward,fast)\n",
+    "        if slow ==-1 or fast==-1 or slow == fast:\n",
+    "            break\n",
+    "    if slow !=-1 and slow ==fast:\n",
+    "        return True\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def find_next_index(arr,is_forward,current_index):\n",
+    "    direction = arr[current_index]>=0\n",
+    "\n",
+    "    if is_forward!=direction:\n",
+    "        return -1\n",
+    "    next_index= (current_index+arr[current_index]) % len(arr)\n",
+    "\n",
+    "    if next_index == current_index:\n",
+    "        next_index=-1\n",
+    "    return next_index\n",
+    "\n",
+    "\n",
+    "print(circular_array_loop_exists([1, 2, -1, 2, 2]))\n",
+    "print(circular_array_loop_exists([2, 2, -1, 2]))\n",
+    "print(circular_array_loop_exists([2, 1, -1, -2]))\n",
+    "\n",
+    "\n"
    ]
   }
  ],
