--- a/educative/pattern_for_coding_questions/fast_and_slow/fast_and_slow.ipynb
+++ b/educative/pattern_for_coding_questions/fast_and_slow/fast_and_slow.ipynb
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 84,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -392,7 +392,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "True\n",
+      "True\n",
+      "False\n"
      ]
     }
    ],
