--- a/educative/pattern_for_coding_questions/merge_intervals/merge_intervals.ipynb
+++ b/educative/pattern_for_coding_questions/merge_intervals/merge_intervals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -15,14 +15,14 @@
      "text": [
       "Merged intervals: 1\n",
       "2\n",
-      "last 1 5 []\n",
-      "\n"
+      "last 2 5 [<__main__.Interval object at 0x1059b8f70>]\n",
+      "[1,1]\n"
      ]
     }
    ],
    "source": [
     "#merge intervals\n",
-    "\n",
+    "# sort O(nLogn)| O(n)\n",
     "class Interval:\n",
     "    def __init__(self,start,end):\n",
     "        self.start = start\n",
