--- a/educative/pattern_for_coding_questions/merge_intervals/merge_intervals.ipynb
+++ b/educative/pattern_for_coding_questions/merge_intervals/merge_intervals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {
     "vscode": {
      "languageId": "ruby"
@@ -15,7 +15,7 @@
      "text": [
       "Merged intervals: 1\n",
       "2\n",
-      "last 2 5 [<__main__.Interval object at 0x1059b8f70>]\n",
+      "last 2 5 [<__main__.Interval object at 0x103f39340>]\n",
       "[1,1]\n"
      ]
     }
@@ -60,6 +60,26 @@
     "for i in merge([Interval(1, 1), Interval(2, 5), Interval(3, 5)]):\n",
     "    i.print_interval()\n",
     "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Insert interval medium\n",
+    "\n",
+    "def insert(intervals,new_interval):\n",
+    "    merged=[]\n",
+    "\n",
+    "    return merged\n",
+    "\n",
+    "print(insert([[1,2]],[2,4]))"
    ]
   }
  ],
